tests/good/infinite_fails.ppl
define equal = \m. \n. case m of
  | Zero -> (case n of
    | Zero -> ()
    | Succ n' -> fail)
  | Succ m' -> (case n of
    | Zero -> fail
    | Succ n' -> equal m' n');

define random = amb Zero (Succ random);

equal random Zero

-- correct: [1]
