tests/bad/type_mismatch.ppl
define f = \n. case n of Zero -> () | Succ m -> f (m, m);
f (Succ (Succ Zero))
